--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,6 +29,7 @@ html {
   --cuixe-color: #570700;
   --tobala-color: #303133;
 
+  --fs-big-title: 5rem;
   --fs-title: 4.4rem;
   --fs-sub-title: 4rem;
   --fs-sub-sub-title: 2.8rem;
