--- a/components/contact/ContactForm.module.css
+++ b/components/contact/ContactForm.module.css
@@ -28,7 +28,7 @@
   color: var(--main-brown-color);
   font-size: var(--fs-sub-title);
   font-weight: 500;
-  margin-bottom: 1.5rem;
+  margin-bottom: 5%;
 }
 
 .form-control {
@@ -120,13 +120,14 @@
   /* margin-left: 1rem; */
   display: inline-block;
   font-size: var(--fs-mid-small-text);
+  font-weight: 600;
   padding: 0.5rem 0;
   /* margin: 4rem 0; */
   cursor: pointer;
 
   border-radius: 1.2rem;
   border: none;
-  height: 55%;
+  height: 60%;
   width: 80%;
 
   color: #f3f3f3;
@@ -159,4 +160,53 @@
 
 .container-img img {
   width: 100%;
+}
+
+/**************************/
+/* BELOW 940px /  tablets */
+/**************************/
+@media (max-width: 59em) {
+  .section-contact {
+    flex-direction: column-reverse;
+    padding: 7.5% 0;
+  }
+
+  .container-form {
+    height: 80%;
+    width: 100%;
+  }
+
+  .container-img {
+    height: 20%;
+    width: 100%;
+  }
+
+  .container-img img {
+    height: 100%;
+    width: auto;
+  }
+}
+
+/**************************/
+/* BELOW 544px /  phones */
+/**************************/
+@media (max-width: 34em) {
+  .section-contact {
+    flex-direction: column-reverse;
+  }
+
+  .container-form {
+    height: 100%;
+    width: 100%;
+  }
+
+  .container-form h2 {
+    margin-bottom: 15%;
+  }
+
+  .container-img {
+    display: none;
+    height: 0%;
+    width: 100%;
+  }
 }
