--- a/components/drink/DrinkHeader.module.css
+++ b/components/drink/DrinkHeader.module.css
@@ -45,6 +45,9 @@
 }
 
 .section-img {
+  /* background-color: yellowgreen; */
+  width: 90%;
+  margin: 0 auto;
   height: 80%;
 
   display: flex;
@@ -54,4 +57,28 @@
 
 .section-img img {
   height: 90%;
+}
+
+/**************************/
+/* BELOW 940px /  tablets */
+/**************************/
+@media (max-width: 59em) {
+  .header {
+    height: auto;
+
+    padding-bottom: 5vh;
+  }
+
+  .section-img img {
+    width: 100%;
+    height: auto;
+  }
+
+  .section-img {
+    align-items: flex-start;
+  }
+
+  .section-img img {
+    padding-top: 5%;
+  }
 }
