--- a/components/drink/DrinkIngredients.module.css
+++ b/components/drink/DrinkIngredients.module.css
@@ -1,11 +1,15 @@
 .section-ingredients {
-  height: 50vh;
+  /* height: 50vh; */
   background-color: var(--main-bg-color);
 
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+
+  padding: 5rem 0;
+
+  /* background-color: yellowgreen; */
 }
 
 .section-ingredients h2 {
@@ -26,9 +30,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 
   width: 90%;
   height: 80%;
+
   /* background-color: turquoise; */
 }
 
@@ -48,12 +54,55 @@
 
 .container-ingredient img {
   /* height: 10%; */
-  width: 70%;
+  /* background-color: chartreuse; */
+  width: 80%;
 }
 
 .container-ingredient h3 {
   font-family: var(--ff-sec);
-  font-size: var(--fs-small-text);
+  font-size: var(--fs-mid-small-text);
   font-weight: 500;
   text-align: center;
+
+  height: 5rem;
+  width: 80%;
+  /* background-color: brown; */
+}
+
+/**************************/
+/* BELOW 940px /  tablets */
+/**************************/
+@media (max-width: 59em) {
+  .container-ingredient {
+    width: 30%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1%;
+    padding-top: 2%;
+
+    /* background-color: violet; */
+  }
+}
+
+/**************************/
+/* BELOW 544px /  phones */
+/**************************/
+@media (max-width: 34em) {
+  .container-ingredient {
+    width: 50%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 1%;
+    padding-top: 2%;
+
+    /* background-color: violet; */
+  }
 }
