--- a/components/drink/DrinkPreparation.module.css
+++ b/components/drink/DrinkPreparation.module.css
@@ -12,7 +12,7 @@
 }
 
 .container-video {
-  width: 60%;
+  width: 65%;
   height: 75%;
 
   /* background-color: tomato; */
@@ -51,11 +51,46 @@
 }
 
 .container-steps .step .step-number {
-  font-weight: 500;
+  font-weight: 600;
   font-size: var(--fs-mid-text);
 }
 
 .container-steps .step .step-text {
   /* font-weight: 600; */
-  font-size: var(--fs-small-text);
+  font-size: var(--fs-mid-small-text);
+}
+
+/**************************/
+/* BELOW 940px /  tablets */
+/**************************/
+@media (max-width: 59em) {
+  .container-video {
+    width: 60%;
+    height: 75%;
+  }
+
+  .container-steps {
+    width: 40%;
+    height: 75%;
+  }
+}
+
+/**************************/
+/* BELOW 700px /  smaller tablets */
+/**************************/
+@media (max-width: 44em) {
+  .section-preparation {
+    flex-direction: column;
+    gap: 0%;
+    padding: 10% 0;
+  }
+  .container-video {
+    width: 100%;
+    height: 45%;
+  }
+
+  .container-steps {
+    width: 100%;
+    height: 55%;
+  }
 }
