--- a/components/family/FamillyBottlePrev.module.css
+++ b/components/family/FamillyBottlePrev.module.css
@@ -3,6 +3,9 @@
   padding: 0 10%;
 
   background-color: white;
+  /* background-color: yellowgreen; */
+
+  /* background-color: var(--sec-bg-color); */
 
   display: flex;
   flex-direction: row;
@@ -43,10 +46,8 @@
 .bottle-prev .container-text h2::after {
   display: block;
   content: "";
-  /* width: 12rem; */
   width: 80%;
   height: 0.2rem;
-  /* background-color: var(--arroqueno-color); */
 
   position: absolute;
   bottom: -30%;
@@ -88,8 +89,6 @@
   padding: 1rem 1.5rem;
   border-radius: 1.2rem;
   background-color: transparent;
-  /* background-color: yellowgreen; */
-  /* border: 2px solid var(--arroqueno-color); */
   cursor: pointer;
 
   transition: all 0.3s ease-out;
