--- a/components/layout/MainNavigation.module.css
+++ b/components/layout/MainNavigation.module.css
@@ -3,43 +3,38 @@
   height: 12vh;
   padding: 0 2.5%;
 
-  background-color: var(--main-bg-color);
-  color: var(--black-color);
-
   top: 0;
   left: 0;
   position: fixed;
   z-index: 1000;
 
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-
   display: flex;
   align-items: center;
   justify-content: space-between;
+
+  color: var(--black-color);
+  background-color: var(--main-bg-color);
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
 }
 
 .logo {
-  width: 20%;
+  width: 15%;
   height: 100%;
 
-  font-size: 2rem;
-  font-weight: bold;
-
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
 
   /* background-color: violet; */
 }
 
 .logo img {
-  /* margin-left: 2rem; */
-  height: 100%;
+  height: 90%;
   cursor: pointer;
 }
 
-.header nav {
-  width: 80%;
+.header .main-nav {
+  width: 85%;
 
   display: flex;
   flex-direction: row;
@@ -54,11 +49,10 @@
   align-items: baseline;
 
   /* background-color: yellow; */
-  /* border: 2px solid black; */
 }
 
-.header li {
-  font-size: var(--fs-small-text);
+.header ul li {
+  font-size: var(--fs-mid-small-text);
   font-weight: 500;
   cursor: pointer;
 
@@ -69,20 +63,13 @@
   /* background: #000; */
 }
 
-.header li .logo-nav {
-  /* background-color: saddlebrown; */
-  /* width: 33%; */
-  /* opacity: 0; */
+/* Logo link for the btn-nav */
+.header li .logo-link {
   display: none;
 }
 
-.header li .logo-nav img {
+.header li .logo-link img {
   width: 100%;
-}
-
-.main-nav .pages li .logos img {
-  opacity: 0;
-  /* background-color: yellowgreen; */
 }
 
 .header li > * {
@@ -99,7 +86,7 @@
   font-weight: 800;
 }
 
-.header .pages {
+.header .pages-subnav {
   width: 80%;
 
   display: flex;
@@ -110,14 +97,14 @@
   /* background-color: tomato; */
 }
 
-.header .pages li {
+.header .pages-subnav li {
   margin: 0 2rem;
 
   position: relative;
   transition: color 0.3s ease-in-out;
 }
 
-.header .pages li::after {
+.header .pages-subnav li::after {
   content: "";
   position: absolute;
   bottom: -20%;
@@ -128,15 +115,15 @@
   transition: transform 0.3s ease-in-out;
 }
 
-.header .pages li:hover {
+.header .pages-subnav li:hover {
   color: var(--black-color);
 }
 
-.header .pages li:hover::after {
+.header .pages-subnav li:hover::after {
   transform: scaleX(1);
 }
 
-.header .social-networks {
+.header .social-networks-subnav {
   width: 20%;
 
   display: flex;
@@ -146,18 +133,18 @@
   /* background-color: yellowgreen; */
 }
 
-.header .social-networks li {
+.header .social-networks-subnav li {
   margin-right: 2rem;
 }
 
-.header .social-networks li .icon {
+.header .social-networks-subnav li .icon {
   cursor: pointer;
-  width: 2rem;
+  width: 2.25rem;
 
   transition: all 0.2s ease-in-out;
 }
 
-.header .social-networks li .icon:hover {
+.header .social-networks-subnav li .icon:hover {
   fill: var(--main-brown-color);
 }
 
@@ -169,37 +156,19 @@
   border: none;
   background: none;
   cursor: pointer;
+  /* background-color: yellowgreen; */
 
   display: none;
 }
 
 .icon-mobile-nav {
-  height: 3rem;
-  width: 3rem;
-  color: #333;
+  height: 4rem;
+  width: 4rem;
+  color: var(--black-color);
 }
 
 .icon-mobile-nav.close-outline {
   display: none;
-}
-
-/* rem and em do NOT depend on html font-size in media queries
-Instead, 1rem = 1em = 16px   */
-
-/**************************/
-/* BELOW 1344px /smaller desktops */
-/**************************/
-@media (max-width: 84em) {
-}
-
-/**************************/
-/* BELOW 1200px /landscape tablets */
-/**************************/
-@media (max-width: 75em) {
-  .header {
-    /* 9px / 16px */
-    font-size: 56.25%;
-  }
 }
 
 /**************************/
@@ -208,13 +177,21 @@ Instead, 1rem = 1em = 16px   */
 @media (max-width: 59em) {
   .header {
     /* 8px / 16px */
-    font-size: 50%;
+
+    padding: 0 5%;
+  }
+  .header ul li {
+    font-size: var(--fs-big-text);
   }
 
   .logo {
-    margin-left: 0.1%;
     width: auto;
     /* background-color: yellowgreen; */
+  }
+
+  .logo img {
+    /* margin-left: 2rem; */
+    height: 80%;
   }
 
   /* MOBILE NAVIGATION */
@@ -223,9 +200,9 @@ Instead, 1rem = 1em = 16px   */
     z-index: 100;
   }
 
-  .header li {
+  /* .header li {
     font-size: var(--fs-mid-text);
-  }
+  } */
 
   .header .main-nav {
     position: absolute;
@@ -241,7 +218,7 @@ Instead, 1rem = 1em = 16px   */
     gap: 10%;
     transition: all 0.5s ease-in;
 
-    background-color: rgba(255, 255, 255, 0.96);
+    background-color: rgba(248, 246, 242, 0.999);
 
     /* Hide navigation */
     /* Allows NO transitions at all */
@@ -259,39 +236,35 @@ Instead, 1rem = 1em = 16px   */
     transform: translateX(100%);
   }
 
-  .try {
+  .logo-link-container {
     width: 30%;
   }
 
-  .header li .logo-nav {
-    display: flex;
-
-    /* width: 50%; */
+  .header li .logo-link {
+    display: block;
   }
 
-  .main-nav .pages {
+  .main-nav .pages-subnav {
     flex-direction: column;
     gap: 5rem;
-    /* background-color: violet; */
     width: 100%;
   }
 
-  .main-nav .pages .logo {
+  .main-nav .pages-subnav .logo {
     opacity: 1;
     transition: all 0.2s ease-in-out;
   }
 
-  .main-nav .social-networks {
+  .main-nav .social-networks-subnav {
     width: 100%;
     justify-content: center;
-    /* background-color: yellowgreen; */
   }
 
-  .header .social-networks li {
+  .header .social-networks-subnav li {
     margin: 0 2.5rem;
   }
 
-  .main-nav .social-networks li .icon {
+  .main-nav .social-networks-subnav li .icon {
     width: 3.2rem;
   }
 
@@ -313,19 +286,24 @@ Instead, 1rem = 1em = 16px   */
 }
 
 /**************************/
-/* BELOW 700px /  smaller tablets */
-/**************************/
-@media (max-width: 44em) {
-}
-
-/**************************/
 /* BELOW 544px /  phones */
 /**************************/
 @media (max-width: 34em) {
+  .header li .logo-link img {
+    width: 100%;
+    padding: 0;
+  }
+
+  .logo-link-container {
+    width: 45%;
+  }
 }
 
 /**************************/
 /* BELOW 375px /  phones */
 /**************************/
 @media (max-width: 23em) {
+  .logo-link-container {
+    width: 55%;
+  }
 }
