Updated image folders

--- a/components/about/AboutTribute.module.css
+++ b/components/about/AboutTribute.module.css
@@ -12,7 +12,7 @@
   height: 70%;
   width: 100%;
 
-  background-image: url("../../public/static/images/Reserva_Ancestral_Persona_3.jpg");
+  background-image: url("../../public/static/images/photos/Reserva_Ancestral_Nosotros_02.jpeg");
   background-repeat: no-repeat;
   background-position: right bottom;
   background-size: cover;
