--- a/components/about/AboutHistory.module.css
+++ b/components/about/AboutHistory.module.css
@@ -2,7 +2,7 @@
   height: 100vh;
   position: relative;
 
-  background-image: url("../../public/static/images/Reserva_Ancestral_Persona.png");
+  background-image: url("../../public/static/images/photos/Reserva_Ancestral_Nosotros_01.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
