--- a/components/about/AboutVoice.module.css
+++ b/components/about/AboutVoice.module.css
@@ -2,7 +2,7 @@
   height: 88vh;
   position: relative;
 
-  background-image: url("../../public/static/images/Reserva_Ancestral_Persona_2.png");
+  background-image: url("../../public/static/images/photos/Reserva_Ancestral_Nosotros_03.jpg");
   background-repeat: no-repeat;
   background-position: left bottom;
   background-size: cover;
