--- a/components/layout/Footer.module.css
+++ b/components/layout/Footer.module.css
@@ -32,6 +32,7 @@
   display: inline;
   font-size: var(--fs-mid-small-text);
   font-weight: 300;
+  cursor: pointer;
 
   /* background-color: violet; */
 }
