Fixed some semantic html errors

--- a/components/layout/MainNavigation.module.css
+++ b/components/layout/MainNavigation.module.css
@@ -135,6 +135,17 @@
 
 .header .social-networks-subnav li {
   margin-right: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.header .social-networks-subnav li a {
+  display: inline-block;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .header .social-networks-subnav li .icon {
