--- a/components/about/AboutTribute.module.css
+++ b/components/about/AboutTribute.module.css
@@ -46,6 +46,10 @@
 /* BELOW 940px /  tablets */
 /**************************/
 @media (max-width: 59em) {
+  .section-tribute .container-bg {
+    background-image: url("../../public/static/images/photos/Reserva_Ancestral_Nosotros_02_tablet.jpeg");
+  }
+
   .section-tribute .container-bg p {
     width: 25%;
   }
@@ -62,6 +66,8 @@
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
+
+    background-image: url("../../public/static/images/photos/Reserva_Ancestral_Nosotros_02_phone.jpeg");
   }
 
   .section-tribute .container-bg h2 {
