--- a/components/main/MainHeader.module.css
+++ b/components/main/MainHeader.module.css
@@ -60,7 +60,8 @@
 /**************************/
 @media (max-width: 59em) {
   .main-header {
-    background-position: center; /* Center the image */
+    background-position: center;
+    background-image: url("../../public/static/images/photos/Reserva_Ancestral_Botellas_01_tablet.jpg");
   }
 
   /* .main-header h2 {
@@ -87,6 +88,11 @@
 /* BELOW 544px /  phones */
 /**************************/
 @media (max-width: 34em) {
+  .main-header {
+    background-position: center;
+    background-image: url("../../public/static/images/photos/Reserva_Ancestral_Botellas_01_phone.jpg");
+  }
+
   .main-header h2 {
     width: 80%;
 
