--- a/components/family/FamillyBottlePrev.module.css
+++ b/components/family/FamillyBottlePrev.module.css
@@ -139,9 +139,13 @@
   /* background-color: tomato; */
 }
 
-.bottle-prev .container-img img {
+.bottle-prev .container-img picture {
   height: 85%;
   filter: drop-shadow(0px 40px 60px rgba(0, 0, 0, 0.15));
+}
+
+.bottle-prev .container-img picture img {
+  height: 100%;
 }
 
 /**************************/
