--- a/components/main/MainSliderBottles.module.css
+++ b/components/main/MainSliderBottles.module.css
@@ -70,23 +70,31 @@
   filter: drop-shadow(0px 4px 30px rgba(0, 0, 0, 0.25));
 }
 
-.my-swiper .my-swiper--slide .img-bottle {
+.my-swiper .my-swiper--slide .container-slide picture {
   /* display: none; */
   height: 120%;
   z-index: 100;
-
+  width: 100%;
   position: absolute;
   top: -14%;
-  left: -30%;
+  left: -55%;
 
   transition: all 0.3s ease-out;
 
   /* background-color: yellowgreen; */
 }
-
-.my-swiper .my-swiper--slide .img-bottle img {
+.my-swiper .my-swiper--slide .container-slide span .img-bottle {
   height: 100%;
+  width: 10%;
+  /* background-color: yellowgreen; */
 }
+
+/* .my-swiper .my-swiper--slide .img-bottle .myImg {
+  position: relative;
+  height: 100%;
+
+  background-color: yellowgreen;
+} */
 
 .my-swiper .my-swiper--slide .container-text {
   display: flex;
@@ -251,7 +259,7 @@
   }
 
   .my-swiper .my-swiper--slide .container-slide {
-    height: 100%;
+    /* height: 100%; */
     width: 100%;
     position: relative;
 
@@ -261,13 +269,15 @@
     align-items: center;
   }
 
-  .my-swiper .my-swiper--slide .img-bottle {
+  .my-swiper .my-swiper--slide .container-slide picture {
     position: relative;
-    height: 75%;
+    height: 100%;
+    width: 120%;
     top: 0%;
     left: 0%;
 
     margin-right: 15%;
+    /* background-color: yellowgreen;  */
   }
 
   .container-text {
