--- a/components/main/MainSpecialCollections.module.css
+++ b/components/main/MainSpecialCollections.module.css
@@ -64,8 +64,15 @@
   /* background-color: violet; */
 }
 
-.section-special-collections .right img {
-  width: 100%;
+.section-special-collections .right picture {
+  width: 90%;
+  height: 100%;
+  /* background-color: tan; */
+  position: relative;
+}
+
+.section-special-collections .right picture .img-bottle {
+  width: 30%;
   border-radius: 1.2rem;
 }
 
