--- a/components/drink/DrinkIngredients.module.css
+++ b/components/drink/DrinkIngredients.module.css
@@ -31,7 +31,7 @@
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-
+  gap: 0%;
   width: 90%;
   height: 80%;
 
@@ -46,8 +46,21 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: center;
-  gap: 1%;
+  gap: 10%;
   padding-top: 2%;
+
+  /* background-color: violet; */
+  position: relative;
+}
+
+.container-ingredient picture {
+  position: relative;
+  /* height: 200px;
+  width: 200px; */
+  /* height: 20rem;
+  width: 20rem; */
+  width: 80%;
+  height: 20rem;
 
   /* background-color: violet; */
 }
@@ -92,6 +105,9 @@
 /* BELOW 544px /  phones */
 /**************************/
 @media (max-width: 34em) {
+  /* .container-ingredients {
+    gap: 5%;
+  } */
   .container-ingredient {
     width: 50%;
     height: 100%;
