--- a/components/drink/DrinkPreparation.module.css
+++ b/components/drink/DrinkPreparation.module.css
@@ -15,12 +15,25 @@
   width: 65%;
   height: 75%;
 
-  /* background-color: tomato; */
+  background-color: tomato;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+}
+
+.container-video .vid-cont {
+  background-color: yellowgreen;
+  /* height: 100%; */
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
 }
 
 .container-video iframe {
   width: 100%;
   height: 100%;
+  align-self: stretch;
+  background-color: yellowgreen;
 }
 
 .container-steps {
