--- a/components/contact/ContactForm.module.css
+++ b/components/contact/ContactForm.module.css
@@ -158,8 +158,21 @@
   /* background-color: violet; */
 }
 
-.container-img img {
+.container-img picture {
   width: 100%;
+  height: 45%;
+  position: relative;
+}
+
+/**************************/
+/* BELOW 1200px /landscape tablets */
+/**************************/
+@media (max-width: 75em) {
+  .container-img picture {
+    width: 100%;
+    height: 35%;
+    position: relative;
+  }
 }
 
 /**************************/
@@ -168,7 +181,7 @@
 @media (max-width: 59em) {
   .section-contact {
     flex-direction: column-reverse;
-    padding: 7.5% 0;
+    padding: 5% 0;
   }
 
   .container-form {
@@ -177,13 +190,31 @@
   }
 
   .container-img {
-    height: 20%;
+    height: 100%;
     width: 100%;
+
+    background-color: yellowgreen;
   }
 
-  .container-img img {
+  .container-img picture {
+    width: 60%;
     height: 100%;
-    width: auto;
+    position: relative;
+
+    background-color: wheat;
+  }
+}
+
+/**************************/
+/* BELOW 700px /  smaller tablets */
+/**************************/
+@media (max-width: 44em) {
+  .container-img picture {
+    width: 60%;
+    height: 80%;
+    position: relative;
+
+    background-color: wheat;
   }
 }
 
