--- a/components/drink/DrinkHeader.module.css
+++ b/components/drink/DrinkHeader.module.css
@@ -59,6 +59,9 @@
   height: 80%;
   width: 100%;
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .section-img picture img {
