--- a/components/family/FamillyBottlePrev.module.css
+++ b/components/family/FamillyBottlePrev.module.css
@@ -41,6 +41,7 @@
   font-size: var(--fs-sub-sub-title);
   font-weight: 600;
   margin-bottom: 2rem;
+  text-align: center;
 
   position: relative;
 }
@@ -142,6 +143,20 @@
   /* background-color: tomato; */
 }
 
+.bottle-prev .container-img picture {
+  height: 100%;
+  width: 100%;
+  /* background-color: yellowgreen; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.bottle-prev .container-img picture img {
+  height: 100%;
+  filter: drop-shadow(0px 40px 60px rgba(0, 0, 0, 0.15));
+}
+
 /* .bottle-prev .container-img span {
   height: 85%;
   width: 50%;
@@ -163,10 +178,10 @@
     padding: 0 7.5%;
   }
 
-  .bottle-prev .container-img img {
-    /* height: 70%; */
-    width: 100%;
-    height: auto;
+  .bottle-prev .container-img picture {
+    /* width: 100%; */
+    height: 90%;
+    /* background-color: yellowgreen; */
   }
 }
 
@@ -201,8 +216,25 @@
     padding-right: 7.5%;
   }
 
-  .bottle-prev .container-img img {
-    height: 80%;
-    width: auto;
+  .bottle-prev .container-img picture img {
+    padding-right: 3%;
+  }
+}
+
+/**************************/
+/* BELOW 544px /  phones */
+/**************************/
+@media (max-width: 34em) {
+  .bottle-prev .container-img picture img {
+    padding-right: 7%;
+  }
+}
+
+/**************************/
+/* BELOW 375px /  phones */
+/**************************/
+@media (max-width: 23em) {
+  .bottle-prev .container-img picture img {
+    padding-right: 11%;
   }
 }
