--- a/components/main/MainSpecialCollections.module.css
+++ b/components/main/MainSpecialCollections.module.css
@@ -69,10 +69,13 @@
   height: 100%;
   /* background-color: tan; */
   position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
-.section-special-collections .right picture .img-bottle {
-  width: 30%;
+.section-special-collections .right picture img {
+  width: 100%;
   border-radius: 1.2rem;
 }
 
@@ -101,6 +104,8 @@
     padding-left: 0%;
     width: 70%;
     height: auto;
+
+    justify-content: center;
   }
 }
 
