--- a/components/bottle/BottleInfo.module.css
+++ b/components/bottle/BottleInfo.module.css
@@ -10,6 +10,7 @@
 .title {
   font-size: var(--fs-sub-title);
   position: relative;
+  text-align: center;
 }
 
 .title::after {
@@ -41,6 +42,8 @@
 .description {
   font-family: var(--ff-sec);
   font-size: var(--fs-small-text);
+
+  /* background-color: yellowgreen; */
 }
 
 .container-options {
@@ -86,4 +89,32 @@
 .info li span {
   font-weight: 600;
   /* background-color: yellowgreen; */
+}
+
+/**************************/
+/* BELOW 1200px /landscape tablets */
+/**************************/
+@media (max-width: 75em) {
+  .section-info {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    padding: 0 0%;
+  }
+}
+
+/**************************/
+/* BELOW 700px /  smaller tablets */
+/**************************/
+@media (max-width: 44em) {
+  .section-info {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    padding: 0 5%;
+  }
 }
