Changing button for main special collections

--- a/components/layout/Button.module.css
+++ b/components/layout/Button.module.css
@@ -2,6 +2,7 @@
   font-family: Lora;
   color: var(--black-color);
   /* width: 15rem; */
+  width: auto;
 
   margin-top: 2rem;
   font-size: 1.6rem;
