--- a/components/bottle/BottlePreview.module.css
+++ b/components/bottle/BottlePreview.module.css
@@ -13,8 +13,10 @@
   font-weight: 600;
 
   display: flex;
-  align-items: flex-end;
+  align-items: center;
   justify-content: center;
+
+  /* background-color: yellow; */
 }
 
 .container-bottles {
@@ -36,7 +38,7 @@
   position: relative;
   transition: all 0.2s ease-in-out;
   background-color: var(--main-bg-color);
-  border-radius: 1.5rem;
+  border-radius: 1.5rem 1.5rem 0 0;
   overflow: hidden;
 }
 
@@ -50,8 +52,9 @@
   background-color: var(--main-bg-color);
   text-align: center;
   padding: 1rem 0;
-  font-size: var(--fs-mid-small-text);
   bottom: 0;
+
+  font-size: var(--fs-mid-small-text);
 
   /* overflow: hidden; */
   /* border-radius: 0px 0px 1.5rem 1.5rem; */
@@ -100,7 +103,7 @@
   .section-more-bottles {
     height: 100vh;
 
-    margin: 2.5% 5%;
+    margin: 2.5% 0%;
   }
 
   .title {
@@ -115,6 +118,7 @@
   }
 
   .container-bottles .container-bottle {
+    height: 45%;
     width: 100%;
   }
 }
