--- a/components/drink/DrinkPreparation.module.css
+++ b/components/drink/DrinkPreparation.module.css
@@ -21,11 +21,13 @@
   align-items: center; */
 }
 
-.container-video iframe {
+.container-video > div {
   width: 100%;
-  /* height: 100%; */
+  height: 100%;
   align-self: stretch;
   /* background-color: yellowgreen; */
+
+  border-radius: 1.5rem;
 }
 
 .container-steps {
@@ -91,22 +93,20 @@
     flex-direction: column;
     gap: 0%;
     padding: 10% 0;
+
+    /* height: 100vh; */
+    /* background-color: yellowgreen; */
+
+    gap: 2.5%;
   }
+
   .container-video {
     width: 100%;
-    height: 45%;
-  }
-
-  .container-video iframe {
-    /* width: 100%; */
-
-    height: 250px;
-    align-self: stretch;
-    background-color: yellowgreen;
+    height: 50%;
   }
 
   .container-steps {
     width: 100%;
-    height: 55%;
+    height: 50%;
   }
 }
