--- a/components/layout/AgeConfirm.module.css
+++ b/components/layout/AgeConfirm.module.css
@@ -10,7 +10,7 @@
 
   z-index: 10000;
 
-  background-image: url("../../public/static/images/photos/Background_Age.png");
+  background-image: url("../../public/static/images/photos/Reserva_Ancestral_Agaves.JPG");
   background-repeat: no-repeat; /* Do not repeat the image */
   background-position: right bottom; /* Center the image */
   background-size: cover;
@@ -99,6 +99,10 @@
 /* BELOW 940px /  tablets */
 /**************************/
 @media (max-width: 59em) {
+  .section-age {
+    background-image: url("../../public/static/images/photos/Reserva_Ancestral_Agaves_tablet.jpg");
+  }
+
   .black-bg picture {
     height: 35%;
     width: 70%;
@@ -111,6 +115,10 @@
 /* BELOW 544px /  phones */
 /**************************/
 @media (max-width: 34em) {
+  .section-age {
+    background-image: url("../../public/static/images/photos/Reserva_Ancestral_Agaves_phone.jpg");
+  }
+
   .black-bg picture {
     height: 30%;
     width: 95%;
