--- a/components/contact/ContactForm.module.css
+++ b/components/contact/ContactForm.module.css
@@ -2,12 +2,14 @@
   margin: 0 auto;
   margin-top: 12vh;
   height: 88vh;
-  width: 90%;
+  width: 100%;
 
   /* height: 68vh; */
 
   display: flex;
   flex-direction: row-reverse;
+
+  position: relative;
 
   /* background-color: rgb(255, 204, 195); */
 }
@@ -171,6 +173,51 @@
   width: 100%;
 }
 
+/* After submission */
+.section-contact .container-bg-thanks {
+  height: 100%;
+  width: 100%;
+
+  position: absolute;
+  z-index: 100;
+  left: 0;
+  top: 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.section-contact .container-bg-thanks .container-thanks {
+  height: 50%;
+  width: 50%;
+  background-color: var(--main-bg-color);
+  border-radius: 1.5rem;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.section-contact .container-bg-thanks .container-thanks h3 {
+  font-size: var(--fs-sub-sub-title);
+  text-align: center;
+}
+
+.section-contact .container-bg-thanks .container-thanks p {
+  width: 90%;
+  text-align: center;
+  font-family: var(--ff-sec);
+  font-size: var(--fs-mid-text);
+
+  margin-top: 2.5%;
+  margin-bottom: 5%;
+}
+
 /**************************/
 /* BELOW 1200px /landscape tablets */
 /**************************/
@@ -223,6 +270,11 @@
 
     /* background-color: wheat; */
   }
+
+  .section-contact .container-bg-thanks .container-thanks {
+    height: 75%;
+    width: 75%;
+  }
 }
 
 /**************************/
@@ -246,5 +298,9 @@
     display: none;
     height: 0%;
     width: 100%;
+  }
+
+  .section-contact .container-bg-thanks .container-thanks {
+    height: 55%;
   }
 }
