--- a/components/main/MainHeader.module.css
+++ b/components/main/MainHeader.module.css
@@ -6,7 +6,7 @@
   /* height: 88vh; */
   height: 100vh;
 
-  background-image: url("../../public/static/images/photos/Reserva_Ancestral_Botellas_01.png");
+  background-image: url("../../public/static/images/photos/Reserva_Ancestral_Botellas_01_resized.jpg");
   background-repeat: no-repeat; /* Do not repeat the image */
   background-position: right bottom; /* Center the image */
   background-size: cover;
