--- a/components/about/AboutHistory.module.css
+++ b/components/about/AboutHistory.module.css
@@ -11,6 +11,7 @@
 .header h2 {
   color: var(--main-bg-color);
   font-size: var(--fs-title);
+  font-weight: 700;
 
   position: absolute;
   top: 30%;
