--- a/components/cocktails/CocktailsAllDrinks.module.css
+++ b/components/cocktails/CocktailsAllDrinks.module.css
@@ -11,9 +11,9 @@
 }
 
 .header h1 {
-  font-size: var(--fs-sub-title);
+  font-size: var(--fs-title);
   text-align: center;
-  font-weight: 500;
+  font-weight: 700;
   color: var(--main-brown-color);
   /* background-color: yellowgreen; */
 }
