--- a/components/process/AllProcess.module.css
+++ b/components/process/AllProcess.module.css
@@ -6,10 +6,11 @@
 
   text-align: center;
 
-  font-size: var(--fs-sub-title);
+  /* font-size: var(--fs-sub-title); */
+  font-size: var(--fs-title);
   text-align: center;
-  font-weight: 500;
-  color: var(--main-brown-color);
+  font-weight: 700;
+  color: var(--tobala);
   /* background-color: yellowgreen; */
 }
 
